# dltrain

./: LICENSE  README.md  pyproject.toml
dltrain-demo/: pyproject.toml
dltrain-demo/src/dltrain/: __init__.py  delineator.py  evaluation.py  forward.py  inject.py  transform.py
dltrain-demo/src/dltrain.egg-info/: PKG-INFO  SOURCES.txt
dltrain-demo/src/dltrain/builder/: dataset.py  delineator.py  forward.py  optimizer.py  scheduler.py
dltrain-demo/tests/: python.py
src/dltrain/: __init__.py  checkpoint.py  dataset.py  delineator.py  error.py  evaluation.py  forward.py  inject.py  models.py  options.py  train.py  transform.py  utils.py
src/dltrain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dltrain/builder/: __init__.py  base.py  builder.py  core.py  criterion.py  dataset.py  delineator.py  evaluation.py  forward.py  inject.py  model.py  optimizer.py  scheduler.py  transforms.py
src/dltrain/models/: __init__.py  builder.py  component.py  model.py  wrapper.py
tests/: demo-iris.py  iris.py  mnist.py  python.py
