[project]
name = "dltrain"
version = "0.1.5"
authors = [
  { name="XiaosYu", email="lijingyu_ai@163.com" },
]
description = "This is a package for PyTorch training, and this project provides a large number of high-level training APIs and low-level interfaces to meet all training needs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/XiaosYu/dltrain"
"Bug Tracker" = "https://github.com/XiaosYu/dltrain/issues"